fix(rux-global-status-bar): elements overlapping (#208)

--- a/packages/astro-components-stencil/src/components/rux-global-status-bar/rux-global-status-bar.scss
+++ b/packages/astro-components-stencil/src/components/rux-global-status-bar/rux-global-status-bar.scss
@@ -1,6 +1,7 @@
 :host {
     display: block;
     position: sticky;
+    z-index: 50;
 
     top: 0;
     left: 0;
